--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,9 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+h1, h3 {
+  margin: 1rem 0;
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,11 +19,3 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
